# htmlDocsRAG

./: .gitignore  AGENTS.md  README.md  build_index.py  chunking.py  db.py  gitignore  mcp_server.py  pyproject.toml
.claude/skills/: comsol-docs.md
.codex/skills/: comsol-docs.md
.codex/skills/comsol-docs/: SKILL.md
.github/workflows/: ci.yml
docs/: comsol.md  development.md  troubleshooting.md
scripts/: convert_comsol_html.py  convert_html.sh  fetch_github_docs.py  fetch_rtd_docs.py  organize_comsol_docs.py
tests/: __init__.py  conftest.py  test_chunking.py  test_indexing.py  test_rrf.py  test_search.py
