[project]
name = "local-docs-mcp"
version = "0.1.0"
description = "Local documentation retrieval via MCP for LLM coding assistants"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
